# app/Http/Controllers/IngestionController.php
@@ -9,6 +9,7 @@ use App\Models\User;
 use Exception;
 use Illuminate\Http\Request;
 use Illuminate\Validation\Rule;
+use Illuminate\Support\Facades\DB;
 
 class IngestionController extends Controller
 {
@@ -83,6 +84,77 @@ class IngestionController extends Controller
                 return response()->json([
                     'message' => 'No autorizado'
                 ], 401);
+            }
+        } else {
+            return response()->json([
+                'message' => 'No autorizado'
+            ], 401);
+        }
+    }
+
+     /**
+     * Retorna la gratificación de los niños, si no tienen ingestiones registradas, no se de devuelven 
+     * ni la gratificación ni la hora del tipo de comida.
+     * 
+     * Se consulta por tipo de comida y por fecha
+     *
+     * El formato de la fecha es YYYY-MM-DD
+     * 
+     * @OA\Patch(
+     *     path="/api/getIngestasByGroup",
+     *     tags={"Ingestiones"},
+     *     summary="Publicación de un auncio",
+     *     security={{"bearerAuth": {}}},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="type", type="string"), 
+     *             @OA\Property(property="date", type="string")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Se almacena un anuncio en un grupo."
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *     )
+     * )
+     */
+    public function getIngestasByGroup(Request $request)
+    {   
+        $user = $request->user();
+
+        if($user->role_id == 1){
+            try{
+                $request->validate([
+                    'type' => 'required',
+                    'date' => 'required|date_format:Y-m-d'
+                ]);
+    
+                $groupId = $user->group->id;
+    
+                $ingestions = DB::table('children')
+                    ->leftJoin('ingestions', function ($join){
+                        $join->on('children.id', '=', 'ingestions.id_child');
+                    })
+                    ->leftJoin('food', function ($join) use ($request){
+                        $join->on('ingestions.id_food', '=', 'food.id')
+                            ->where('food.type', '=', $request->type)
+                            ->where('food.date', '=', $request->date);
+                    })
+                    ->selectRaw('children.id as id_child, food.name, COALESCE(food.hour, "00:00:00") as hour, COALESCE(ingestions.gratification, 0) as gratification')
+                    ->where('children.id_group', '=', $groupId)
+                    ->get();
+
+                return response()->json([
+                    'ingestions' => $ingestions
+                ], 200);
+            } catch (Exception $ex){
+                return response()->json([
+                    'message' => $ex
+                ]);
             }
         } else {
             return response()->json([
